fix slider resize font on mobile

--- a/layalina_mobile_bootstrap/css/layalina_mobile.css
+++ b/layalina_mobile_bootstrap/css/layalina_mobile.css
@@ -490,13 +490,14 @@ border-top: 0;}
 .slider_font:before {top:-6px; right: 9px; border-bottom-color:#c1c1c1; border-width:6px; /* Stroke */}
 .slider_font:after {top:-5px; right: 10px; border-bottom-color:#ffffff; border-width:5px; /* Fill */}
 
-.slider_font .ui-widget-header{ background:none;}
-.slider_font .ui-slider-vertical .ui-slider-handle{left: -.5em;  background:#bb1f68; border:2px solid #ffffff;
+/*.slider_font .ui-widget-header{ background:none;}*/
+.slider_font .slider-vertical .slider-handle{ left:-4px; background:#bb1f68; border:2px solid #ffffff; box-shadow:none;
+opacity:1; filter:alpha(opacity=100);
 -webkit-border-radius:30px;
 -moz-border-radius:30px;
 border-radius:30px;}
-.slider_font .ui-widget-content{ background:#404040}
-.slider_font .ui-slider-vertical{ width:0.2em; margin:0 auto; height:70px;}
+.slider_font .slider-vertical{height:70px;}
+.slider_font .slider-vertical .slider-track{ width:0.2em; margin:0 auto; background:#404040}
 
 /*  JQuery Share Buttons */
 .share_popupIcns { padding:3px 2px 3px 3px; font-size:12px; width:25px; height:25px; text-align:center; vertical-align:middle; display:block; 
